# n64-9axis-pak

./: README.md
arduino/pak-9axis/: pak-9axis.ino
arduino/test-irq/: test-irq.ino
docs/: sensor-notes.md
docs/pico/: Beginners Guide to I2C on the Raspberry Pi Pico (BNO055 IMU Example) - YouTube.url  How to Set Up a Project in Visual Studio Code for the Pi Pico - Blink LED - YouTube.url
pico/n64-9axis-pak/: CMakeLists.txt  hardware.h  io.cpp  io.hpp  main.cpp  open-workspace.bat  state.h
pico/pio-pak/: CMakeLists.txt  clocked_input.c  delete-build-folder.bat  open-workspace.bat
